@@ -1,3 +1,9 @@
+2004-09-14  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
+	* libraries/javalib/java/net/Socket.java
+	(getLocalAddress()): If the socket is not bound yet,
+	return InetAddress.ANY_IF rather than null.
+
 2004-09-13  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/clib/native/TimeZone.c:
